<resources>
    <string name="app_name">Faithful</string>
    <string name="app_license">GNU General Public License v3.0</string>
    <string name="app_author">mowtiie</string>
    <string name="app_easter_egg">You\'ve done this before, haven\'t you?</string>

    <string name="export_file_name">exported_thoughts</string>

    <string name="empty_indicator_idea_list">No thoughts found</string>

    <string name="title_activity_settings">SettingsActivity</string>

    <string name="toolbar_settings">Settings</string>

    <string name="link_app_source_code">https://github.com/mowtiie/Faithful</string>
    <string name="link_app_author">https://github.com/mowtiie</string>

    <string name="hint_toolbar_search">Search here</string>

    <string name="field_thought_content">Content</string>
    <string name="field_thought_content_empty_error">This field is required</string>
    <string name="field_app_password_error">This field is required</string>
    <string name="field_app_password_must_match_error">Both passwords must match</string>
    <string name="field_thought_helper">*required</string>
    <string name="field_app_password">Password</string>
    <string name="field_app_password_helper">This field is required</string>
    <string name="field_app_confirm_password">Confirm Password</string>
    <string name="field_app_password_too_short_error">Password is too weak</string>
    <string name="field_app_password_incorrect_error">Incorrect password, please try again.</string>

    <string name="dialog_new_thought">New Thought</string>
    <string name="dialog_button_cancel">Cancel</string>
    <string name="dialog_button_confirm">Confirm</string>
    <string name="dialog_button_delete">Delete</string>
    <string name="dialog_button_close">Close</string>
    <string name="dialog_button_grant">Grant</string>
    <string name="dialog_button_lock">Lock</string>
    <string name="dialog_button_remove">Remove</string>
    <string name="dialog_title_app_lock">Enable app lock</string>
    <string name="dialog_title_remove_app_lock">Disable app lock?</string>
    <string name="dialog_title_delete_thought">Delete thought?</string>
    <string name="dialog_message_app_lock">Keep your thoughts to yourself. Turn on app lock with a password to prevent unwanted people at bay.</string>
    <string name="dialog_message_delete_thought">You are about to delete this thought, this action cannot be undone.</string>
    <string name="dialog_message_remote_app_lock">You are about to disable app lock, this action may leave your thoughts exposed and unprotected.</string>

    <string name="toast_unlock_error">Something went wrong when trying to unlock</string>
    <string name="toast_license_error">Something went wrong when trying to load the license file</string>
    <string name="toast_export_failed">Something went wrong when exporting thoughts</string>
    <string name="toast_import_failed">Something went wrong when importing thoughts</string>
    <string name="toast_app_lock_error">Something went wrong enabling app lock</string>
    <string name="toast_version_error">Error loading application version</string>
    <string name="toast_app_lock_enabled">App lock has been enabled</string>
    <string name="toast_app_lock_disabled">App lock has been disabled</string>
    <string name="toast_notification_permission_denied">Notification permission denied</string>
    <string name="toast_notification_permission_granted">Notification permission granted</string>
    <string name="toast_no_thoughts">No thoughts to export</string>
    <string name="toast_import_successful">Thoughts has been imported</string>
    <string name="toast_export_successful">Thoughts has been exported</string>
    <string name="snack_bar_permission_notifications">Deadlines requires notification permissions to work.</string>

    <string name="placeholder_thought_timestamp">02/14/2026 1:40 AM</string>

    <string name="button_share">Share</string>
    <string name="button_delete">Delete</string>

    <string name="lorem_ipsum">Lorem ipsum dolor sit amet consectetur adipiscing elit. Quisque faucibus ex sapien vitae pellentesque sem placerat. In id cursus mi pretium tellus duis convallis. Tempus leo eu aenean sed diam urna tempor. Pulvinar vivamus fringilla lacus nec metus bibendum egestas. Iaculis massa nisl malesuada lacinia integer nunc posuere. Ut hendrerit semper vel class aptent taciti sociosqu. Ad litora torquent per conubia nostra inceptos himenaeos.</string>

    <string name="menu_filter_date">Filter by date</string>
    <string name="menu_lock">Lock</string>
    <string name="menu_overflow">More Options</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_search">Search</string>
    <string name="menu_sort">Sort by</string>
    <string name="menu_sort_latest">Latest</string>
    <string name="menu_sort_oldest">Oldest</string>

    <!-- APPEARANCE SETTINGS -->
    <string name="setting_category_appearance">Appearance</string>
    <string name="setting_list_theme">Theme</string>
    <string name="setting_list_contrast">Contrast</string>
    <string name="setting_list_timestamp">Timestamp</string>
    <string name="setting_switch_dynamic_colors_title">Dynamic Colors</string>
    <string name="setting_switch_dynamic_colors_summary">Apply colors from your wallpaper to the application theme</string>

    <!-- SECURITY & PRIVACY SETTINGS -->
    <string name="setting_category_security_and_privacy">Security &amp; Privacy</string>
    <string name="setting_switch_screen_privacy_title">Screen Privacy</string>
    <string name="setting_switch_screen_privacy_summary">Prevents capturing of screenshots and screen recordings in the app</string>
    <string name="setting_switch_app_lock_title">App Lock</string>
    <string name="setting_switch_app_lock_summary">Secure your thoughts with a password</string>

    <!-- BACKUP & RESTORE SETTINGS -->
    <string name="setting_category_backup_and_restore">Backup &amp; Restore</string>
    <string name="setting_import_title">Import</string>
    <string name="setting_import_summary">Bring back your exported thoughts</string>
    <string name="setting_export_title">Export</string>
    <string name="setting_export_summary">Bring your thoughts with you anywhere</string>

    <!-- ABOUT SETTINGS-->
    <string name="preference_category_about">About</string>
    <string name="preference_app_version">Version</string>
    <string name="preference_app_license">License</string>
    <string name="preference_app_source_code_title">Source Code</string>
    <string name="preference_app_source_code_summary">Check the Github repository and the README</string>
    <string name="preference_app_author">Author</string>

</resources>