<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="Appearance"
        app:iconSpaceReserved="false">

        <ListPreference
            android:key="theme"
            android:title="@string/setting_list_theme"
            app:iconSpaceReserved="false"/>

        <ListPreference
            android:key="contrast"
            android:title="@string/setting_list_contrast"
            app:iconSpaceReserved="false"/>

        <SwitchPreferenceCompat
            android:key="dynamic_colors"
            android:widgetLayout="@layout/view_setting_switch"
            app:iconSpaceReserved="false"
            android:title="@string/setting_switch_dynamic_colors_title"
            android:summary="@string/setting_switch_dynamic_colors_summary"/>
    </PreferenceCategory>

    <PreferenceCategory
        android:title="Security &amp; Privacy"
        app:iconSpaceReserved="false">

        <SwitchPreferenceCompat
            app:iconSpaceReserved="false"
            android:key="screen_privacy"
            android:title="@string/setting_switch_screen_privacy_title"
            android:summary="@string/setting_switch_screen_privacy_summary"
            android:widgetLayout="@layout/view_setting_switch"/>
    </PreferenceCategory>

</PreferenceScreen>