<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:paddingEnd="24dp"
    android:paddingStart="24dp"
    android:paddingTop="16dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/field_app_password_layout"
        android:hint="@string/field_app_password"
        app:helperTextEnabled="true"
        app:endIconMode="password_toggle"
        app:helperText="@string/field_app_password_helper"
        android:layout_marginBottom="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/field_app_password_text"
            android:inputType="textPassword"
            android:maxLines="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/field_app_confirm_password_layout"
        android:hint="@string/field_app_confirm_password"
        app:helperTextEnabled="true"
        app:endIconMode="password_toggle"
        app:helperText="@string/field_app_confirm_password_helper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/field_app_confirm_password_text"
            android:inputType="textPassword"
            android:maxLines="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </com.google.android.material.textfield.TextInputLayout>
</LinearLayout>