<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/recycler_thought_parent"
    android:clickable="true"
    android:focusable="true"
    android:checkable="true"
    app:cardElevation="0dp"
    app:cardBackgroundColor="?attr/colorSurface"
    style="@style/Widget.Material3.CardView.Outlined"
    app:cardUseCompatPadding="true"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:orientation="vertical"
        android:padding="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/recycler_thought_timestamp"
            android:text="@string/placeholder_thought_timestamp"
            android:textAppearance="?attr/textAppearanceTitleLarge"
            android:layout_marginBottom="12dp"
            android:textColor="?attr/colorPrimary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/recycler_thought_content"
            app:layout_constraintStart_toStartOf="@id/recycler_thought_timestamp"
            app:layout_constraintTop_toBottomOf="@id/recycler_thought_timestamp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:textAppearance="?attr/textAppearanceBodyMedium"
            android:textColor="?attr/colorOnSurface"
            android:maxLines="5"
            android:ellipsize="end"
            android:justificationMode="inter_character"
            android:text="@string/lorem_ipsum"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_marginTop="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/recycler_thought_share"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:text="@string/button_share"
                android:layout_marginEnd="8dp"
                style="outline"
                android:textColor="?attr/colorOnPrimary"
                android:backgroundTint="?attr/colorPrimary"
                app:icon="@drawable/ic_share"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/recycler_thought_delete"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:text="@string/button_delete"
                style="@style/Widget.Material3.Button.OutlinedButton"
                app:icon="@drawable/ic_delete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>
    </LinearLayout>
</com.google.android.material.card.MaterialCardView>